[package]
name = "packling"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
binrw = "0.14"
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.4"
djb2 = { version = "0.1", path = "../djb2" }
lz4_flex = { version = "0.11", default-features = false, features = ["std"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
walkdir = "2.5"
xxtea-nostd = "0.1"
